--- a/home/.zsh/config
+++ b/home/.zsh/config
@@ -2,6 +2,7 @@ export PATH="$HOME/bin:$PATH"
 export PATH="$HOME/Library/Android/sdk/platform-tools:$PATH"
 export PATH="/usr/local/share/dotnet:$PATH"
 export PATH="$HOME/dev/evergreen/.scripts:$PATH"
+export PATH=$HOME/bin:/usr/local/bin:$PATH
 
 export NVM_DIR="$HOME/.nvm"
 
