New scripts; zsh config org

--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -2,7 +2,7 @@
 	email = brady.holt@gmail.com
 	name = Brady Holt
 [push]
-	default = current
+	default = simple
 [core]
 	excludesfile = $HOME/.gitignore_global
 [difftool "sourcetree"]
