--- a/.vscode.settings.json
+++ b/.vscode.settings.json
@@ -1,5 +1,5 @@
 // Place your settings in this file to overwrite the default settings
 {
     "editor.fontSize": 14,
-    "editor.wrappingColumn": 0,
+    "editor.wrappingColumn": 0
 }
