--- a/.gitconfig
+++ b/.gitconfig
@@ -2,7 +2,7 @@
 	email = brady.holt@gmail.com
 	name = Brady Holt
 [push]
-	default = simple
+	default = current
 [core]
 	excludesfile = $HOME/.gitignore_global
 [difftool "sourcetree"]
