Restore bcomp config

--- a/.gitconfig
+++ b/.gitconfig
@@ -8,10 +8,10 @@
 [core]
 	excludesfile = /Users/bholt/.gitignore_global
 [difftool "sourcetree"]
-	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
+	cmd = /usr/local/bin/bcomp -ro $LOCAL $REMOTE
 	path = 
 [mergetool "sourcetree"]
-	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+	cmd = /usr/local/bin/bcomp $LOCAL $REMOTE $BASE $MERGED
 	trustExitCode = true
 [filter "lfs"]
 	clean = git-lfs clean %f
