--- a/.vscode.settings.json
+++ b/.vscode.settings.json
@@ -1,7 +1,7 @@
 // Place your settings in this file to overwrite the default settings
 {
     "editor.fontSize": 14,
-    "editor.formatOnSave": true,
+    "editor.formatOnSave": false,
     "window.zoomLevel": 0,
     "git.confirmSync": false,
     "files.insertFinalNewline": false,
