--- a/.iterm/com.googlecode.iterm2.plist
+++ b/.iterm/com.googlecode.iterm2.plist
@@ -8,6 +8,8 @@
 	<integer>0</integer>
 	<key>AppleSmoothFixedFontsSizeThreshold</key>
 	<integer>1</integer>
+	<key>AppleWindowTabbingMode</key>
+	<string>manual</string>
 	<key>Custom Color Presets</key>
 	<dict>
 		<key>honukai</key>
@@ -455,6 +457,8 @@
 			<string></string>
 		</dict>
 	</dict>
+	<key>HotkeyMigratedFromSingleToMulti</key>
+	<true/>
 	<key>LoadPrefsFromCustomFolder</key>
 	<true/>
 	<key>NSFontPanelAttributes</key>
@@ -496,10 +500,12 @@
 	<true/>
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>-1075 701 445 103 -1715 424 1440 2537 </string>
+	<key>NSWindow Frame SUUpdateAlert</key>
+	<string>130 280 700 622 0 0 1920 1177 </string>
 	<key>NSWindow Frame SharedPreferences</key>
 	<string>-1728 786 937 512 -1895 474 1440 2537 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>3 5 1434 1170 0 0 1920 1177 </string>
+	<string>3 4 954 1173 0 0 1920 1177 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>247 132 650 577 0 0 1920 1177 </string>
 	<key>New Bookmarks</key>
@@ -1325,16 +1331,18 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2017-10-02T15:40:14Z</date>
+	<date>2017-10-10T19:16:17Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>WordCharacters</key>
 	<string>/-+\~_.</string>
 	<key>findIgnoreCase_iTerm</key>
 	<true/>
+	<key>findMode_iTerm</key>
+	<integer>0</integer>
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>3.0.15</string>
+	<string>3.1.3</string>
 </dict>
 </plist>
