--- a/.vscode.settings.json
+++ b/.vscode.settings.json
@@ -9,5 +9,5 @@
     "*.hbs": "html"
   },
   "html.format.wrapLineLength": 120,
-  "workbench.colorTheme": "One Dark Pro"
+  "workbench.colorTheme": "One Dark Pro",
 }
