--- a/bin/package.json
+++ b/bin/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "got": "^8.3.0",
+    "jbash": "^1.48.0",
     "request": "^2.85.0",
     "tempfile": "^2.0.0",
     "wallpaper": "^2.6.0",
